# dertwin

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  generate_compose.py  pyproject.toml
configs/: demo_config.json  full_site_config.json  local_sites_config.json  mixed_protocol_config.json  simple_config.json  sites_config.json
configs/modbus/bess/: read_registers.yaml  write_registers.yaml
configs/modbus/em/: read_registers.yaml  write_registers.yaml
configs/register_maps/: bess_modbus.yaml  chp_modbus.yaml  energy_meter_modbus.yaml  pv_inverter_modbus.yaml
dertwin/: README.md  logging_config.py  main.py
dertwin/controllers/: README.md  device_controller.py  site_controller.py
dertwin/core/: README.md  clock.py  device.py  engine.py  registers.py
dertwin/devices/: bess.py  device.py  energy_meter.py  grid_frequency.py  inverter.py
dertwin/protocol/: README.md  encoding.py  modbus.py  modbus_helpers.py
dertwin/site/: site.py
dertwin/telemetry/: README.md  base.py  bess.py  chp.py  energy_meter.py  pv.py
examples/: config.json  ems.py  main.py  main_full.py  main_mixed.py  main_simple.py  modbus_client.py
examples/full/: config.json  ems.py
examples/mixed/: config.json  ems.py
examples/protocol/: modbus_client.py  modbus_rtu_client.py
examples/simple/: config.json  ems.py
tests/: test_bess.py  test_device_controller.py  test_energy_meter.py  test_grid_frequency.py  test_inverter.py  test_modbus.py  test_site_controller.py
tests/bess/: test_battery_energy.py  test_battery_limits.py  test_battery_thermal.py  test_bess_core.py  test_bess_integration.py  test_inverter.py
tests/controllers/: test_device_controller.py  test_site_controller.py  test_site_controller_mixed_protocols.py
tests/devices/: test_bess.py  test_chp.py  test_energy_meter.py  test_pv.py
tests/protocol/: test_modbus.py
(+36 files in other folders)
